# figma-cc

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-plugin.yml
api/: config.py  logging.py  main.py
api/agents/: persona_agent.py
api/models/: request.py  response.py
api/personas/: definitions.py
api/routers/: feedback.py
docs/: architecture.md
docs/plans/: 2026-02-25-company-deployment-design.md  2026-02-25-company-deployment-plan.md  2026-02-25-modular-refactoring-design.md  2026-02-25-modular-refactoring-plan.md  2026-02-25-structured-logging-design.md  2026-02-25-structured-logging-plan.md
figma-plugin/: biome.json  code.js  code.ts  manifest.json  package-lock.json  package.json  tsconfig.json  ui.html
personas/: accessibility_advocate.json  brand_manager.json  first_time_user.json  power_user.json  skeptical_customer.json  ux_heuristics_evaluator.json
tests/: __init__.py  conftest.py  test_agent.py  test_feedback_endpoint.py  test_integration.py  test_logging.py  test_models.py  test_personas.py
