[project]
name = "synthetic-design-feedback"
version = "0.1.0"
description = "Figma plugin + FastAPI backend for AI-powered design feedback from synthetic personas"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.133.1",
    "loguru>=0.7.3",
    "pillow>=12.1.1",
    "pydantic-ai>=1.63.0",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=api --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]

[tool.ty.environment]
python-version = "3.13"
